--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/img/img.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AdeyemiCODE | Frontend Web Developer</title>
+    <title>AdeyemiCODE | Full-Stack Web Developer</title>
+    <meta name="description" content="AdeyemiCODE is a passionate Full-Stack MERN Developer specializing in building responsive, scalable, and dynamic web applications using MongoDB, Express.js, React, and Node.js." />
+
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   </head>
   <body>
